<resources>
    <string name="app_name">Jarvis</string>
    <string name="app_version">V 2.0</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_settings">Paramètres</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="menu_settings">Paramètres</string>
    <string name="menu_category">Par catégories</string>
    <string name="menu_location">Par pièces</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">GENERAL</string>

    <string name="pref_title_jeedom_api_url">Jeedom Api Url</string>
    <string name="pref_title_jeedom_api_key">Jeedom Api Key</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">SYNCHRONISATION</string>

    <string name="pref_title_sync_frequency">Fréquence de rafraichissement</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 heure</item>
        <item>3 heures</item>
        <item>6 heures</item>
        <item>12 heures</item>
        <item>24 heures</item>
        <item>Jamais</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">NOTIFICATIONS</string>

    <string name="pref_title_vibrate">Vibration</string>

    <string name="default_api_pattern">http://x.x.x.x/core/api/myJeeApi.php?</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

</resources>
